Fixed up spacing

--- a/screen.css
+++ b/screen.css
@@ -35,3 +35,6 @@ code {
   color: #e93e3d;
 }
 
+.footnode {
+  padding-top: 1.5em;
+}
